// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup attached and inline 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0>button:first-of-type {
  border-radius: 0px;
  border-top-left-radius: 0.375em;
  border-bottom-left-radius: 0.375em;
}

.emotion-0>button:first-of-type:after {
  content: "";
  border-radius: 0px;
  border-top-left-radius: 0.5em;
  border-bottom-left-radius: 0.5em;
}

.emotion-0>button:last-of-type {
  border-radius: 0px;
  border-top-right-radius: 0.375em;
  border-bottom-right-radius: 0.375em;
}

.emotion-0>button:last-of-type:after {
  content: "";
  border-radius: 0px;
  border-top-right-radius: 0.5em;
  border-bottom-right-radius: 0.5em;
}

.emotion-0>button:not(:last-of-type):not(:first-of-type) {
  border-radius: 0px;
}

.emotion-0>button:not(:last-of-type):not(:first-of-type):after {
  content: "";
  border-radius: 0px;
}

.emotion-0>button:focus {
  z-index: 10;
}

.emotion-0>:not([hidden])~:not([hidden]) {
  --tw-space-x-reverse: 0;
  margin-right: calc(1em * var(--tw-space-x-reverse));
  margin-left: calc(1em * calc(1 - var(--tw-space-x-reverse)));
}

.emotion-0>:not([hidden])~:not([hidden]) {
  --tw-space-x-reverse: 0;
  margin-right: calc(-1px * var(--tw-space-x-reverse));
  margin-left: calc(-1px * calc(1 - var(--tw-space-x-reverse)));
}

.emotion-2 {
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform,filter,backdrop-filter;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-color: rgba(0,0,0,0);
  border-style: solid;
  border-radius: 0.375em;
  cursor: pointer;
  font-family: inherit;
  font-weight: 500;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  --tw-bg-opacity: 1;
  background-color: rgba(255,255,255,var(--tw-bg-opacity));
  --tw-border-opacity: 1;
  border-color: rgba(229,231,235,var(--tw-border-opacity));
  --tw-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
  box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
  --tw-text-opacity: 1;
  color: rgba(107,114,128,var(--tw-text-opacity));
}

.emotion-2:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #fff,0 0 0 3px #6366f1;
}

.emotion-2:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(243,244,246,var(--tw-bg-opacity));
}

.emotion-2:focus {
  --tw-bg-opacity: 1;
  background-color: rgba(243,244,246,var(--tw-bg-opacity));
}

.emotion-2:hover {
  --tw-text-opacity: 1;
  color: rgba(107,114,128,var(--tw-text-opacity));
}

.emotion-2:focus {
  --tw-text-opacity: 1;
  color: rgba(107,114,128,var(--tw-text-opacity));
}

<div
    class="emotion-0 emotion-1"
  >
    <button
      class=" emotion-2"
      type="button"
    >
      Button
    </button>
    <button
      class=" emotion-2"
      type="button"
    >
      Button
    </button>
    <button
      class=" emotion-2"
      type="button"
    >
      Button
    </button>
  </div>
</DocumentFragment>
`;

exports[`ButtonGroup attached and not inline 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0>button:first-of-type {
  border-radius: 0px;
  border-top-left-radius: 0.375em;
  border-bottom-left-radius: 0.375em;
}

.emotion-0>button:first-of-type:after {
  content: "";
  border-radius: 0px;
  border-top-left-radius: 0.5em;
  border-bottom-left-radius: 0.5em;
}

.emotion-0>button:last-of-type {
  border-radius: 0px;
  border-top-right-radius: 0.375em;
  border-bottom-right-radius: 0.375em;
}

.emotion-0>button:last-of-type:after {
  content: "";
  border-radius: 0px;
  border-top-right-radius: 0.5em;
  border-bottom-right-radius: 0.5em;
}

.emotion-0>button:not(:last-of-type):not(:first-of-type) {
  border-radius: 0px;
}

.emotion-0>button:not(:last-of-type):not(:first-of-type):after {
  content: "";
  border-radius: 0px;
}

.emotion-0>button:focus {
  z-index: 10;
}

.emotion-0>:not([hidden])~:not([hidden]) {
  --tw-space-x-reverse: 0;
  margin-right: calc(1em * var(--tw-space-x-reverse));
  margin-left: calc(1em * calc(1 - var(--tw-space-x-reverse)));
}

.emotion-0>:not([hidden])~:not([hidden]) {
  --tw-space-x-reverse: 0;
  margin-right: calc(-1px * var(--tw-space-x-reverse));
  margin-left: calc(-1px * calc(1 - var(--tw-space-x-reverse)));
}

.emotion-2 {
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform,filter,backdrop-filter;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-color: rgba(0,0,0,0);
  border-style: solid;
  border-radius: 0.375em;
  cursor: pointer;
  font-family: inherit;
  font-weight: 500;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  --tw-bg-opacity: 1;
  background-color: rgba(255,255,255,var(--tw-bg-opacity));
  --tw-border-opacity: 1;
  border-color: rgba(229,231,235,var(--tw-border-opacity));
  --tw-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
  box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
  --tw-text-opacity: 1;
  color: rgba(107,114,128,var(--tw-text-opacity));
}

.emotion-2:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #fff,0 0 0 3px #6366f1;
}

.emotion-2:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(243,244,246,var(--tw-bg-opacity));
}

.emotion-2:focus {
  --tw-bg-opacity: 1;
  background-color: rgba(243,244,246,var(--tw-bg-opacity));
}

.emotion-2:hover {
  --tw-text-opacity: 1;
  color: rgba(107,114,128,var(--tw-text-opacity));
}

.emotion-2:focus {
  --tw-text-opacity: 1;
  color: rgba(107,114,128,var(--tw-text-opacity));
}

<div
    class="emotion-0 emotion-1"
  >
    <button
      class=" emotion-2"
      type="button"
    >
      Button
    </button>
    <button
      class=" emotion-2"
      type="button"
    >
      Button
    </button>
    <button
      class=" emotion-2"
      type="button"
    >
      Button
    </button>
  </div>
</DocumentFragment>
`;

exports[`ButtonGroup not attached and inline 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0>button:focus {
  z-index: 10;
}

.emotion-0>:not([hidden])~:not([hidden]) {
  --tw-space-x-reverse: 0;
  margin-right: calc(1em * var(--tw-space-x-reverse));
  margin-left: calc(1em * calc(1 - var(--tw-space-x-reverse)));
}

.emotion-2 {
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform,filter,backdrop-filter;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-color: rgba(0,0,0,0);
  border-style: solid;
  border-radius: 0.375em;
  cursor: pointer;
  font-family: inherit;
  font-weight: 500;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  --tw-bg-opacity: 1;
  background-color: rgba(255,255,255,var(--tw-bg-opacity));
  --tw-border-opacity: 1;
  border-color: rgba(229,231,235,var(--tw-border-opacity));
  --tw-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
  box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
  --tw-text-opacity: 1;
  color: rgba(107,114,128,var(--tw-text-opacity));
}

.emotion-2:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #fff,0 0 0 3px #6366f1;
}

.emotion-2:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(243,244,246,var(--tw-bg-opacity));
}

.emotion-2:focus {
  --tw-bg-opacity: 1;
  background-color: rgba(243,244,246,var(--tw-bg-opacity));
}

.emotion-2:hover {
  --tw-text-opacity: 1;
  color: rgba(107,114,128,var(--tw-text-opacity));
}

.emotion-2:focus {
  --tw-text-opacity: 1;
  color: rgba(107,114,128,var(--tw-text-opacity));
}

<div
    class="emotion-0 emotion-1"
  >
    <button
      class=" emotion-2"
      type="button"
    >
      Button
    </button>
    <button
      class=" emotion-2"
      type="button"
    >
      Button
    </button>
  </div>
</DocumentFragment>
`;

exports[`ButtonGroup not attached and not inline 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0>button:focus {
  z-index: 10;
}

.emotion-0>:not([hidden])~:not([hidden]) {
  --tw-space-y-reverse: 0;
  margin-top: calc(0.5em * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(0.5em * var(--tw-space-y-reverse));
}

.emotion-2 {
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform,filter,backdrop-filter;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: auto;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-color: rgba(0,0,0,0);
  border-style: solid;
  border-radius: 0.375em;
  cursor: pointer;
  font-family: inherit;
  font-weight: 500;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  --tw-bg-opacity: 1;
  background-color: rgba(255,255,255,var(--tw-bg-opacity));
  --tw-border-opacity: 1;
  border-color: rgba(229,231,235,var(--tw-border-opacity));
  --tw-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
  box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
  --tw-text-opacity: 1;
  color: rgba(107,114,128,var(--tw-text-opacity));
}

.emotion-2:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.emotion-2:focus {
  box-shadow: 0 0 0 1px #fff,0 0 0 3px #6366f1;
}

.emotion-2:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(243,244,246,var(--tw-bg-opacity));
}

.emotion-2:focus {
  --tw-bg-opacity: 1;
  background-color: rgba(243,244,246,var(--tw-bg-opacity));
}

.emotion-2:hover {
  --tw-text-opacity: 1;
  color: rgba(107,114,128,var(--tw-text-opacity));
}

.emotion-2:focus {
  --tw-text-opacity: 1;
  color: rgba(107,114,128,var(--tw-text-opacity));
}

<div
    class="emotion-0 emotion-1"
  >
    <button
      class=" emotion-2"
      type="button"
    >
      Button
    </button>
    <button
      class=" emotion-2"
      type="button"
    >
      Button
    </button>
  </div>
</DocumentFragment>
`;
